Fixed broken style tag

--- a/style.scss
+++ b/style.scss
@@ -68,7 +68,7 @@ p {
   margin: 15px 0;
 }
 
-p.subheading {
+p.subtitle {
     color: #999;
     font-size: 1em;
     position: relative;
